--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ pytest-alembic = "^0.8.4"
 httpx = "^0.23.0"
 factory-boy = "^3.2.1"
 pytest-freezegun = "^0.4.2"
+pytest-django = "^4.5.2"
 
 [build-system]
 requires = ["poetry-core"]
