--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,16 @@ skip_glob = []
 [tool.mypy]
 ignore_missing_imports = true
 
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = tests.settings
+norecursedirs = ["venv", ".venv", ".env", "migrations"]
+testpaths = ["tests",]
+console_output_style = "progress"
+python_files = "test_*"
+python_classes = "Test*"
+python_functions = "test_*"
+asyncio_mode = "auto"
+
 # === Pytest ===
 [tool.pytest.ini_options]
 norecursedirs = ["venv", ".venv", ".env", "migrations"]
