--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ asyncpg = "0.25.0"
 psycopg2-binary = "2.9.3"
 python-dotenv = "^0.21.1"
 pillow = "^9.4.0"
+django-grappelli = "^3.0.4"
 
 [tool.poetry.group.lint]
 optional = true
